# otus-c-2021-09-Smelskiy

./: .gitmodules  CMakeLists.txt  README.md
hw1-rarjpeg/: CMakeLists.txt  PKZip.h  README.md  main.c
hw10-CRC32/: CMakeLists.txt  README.md  main.c
hw11-ParsingLogs/: CMakeLists.txt  CombinedLog.c  CombinedLog.h  FileList.c  FileList.h  FileWithMutex.c  FileWithMutex.h  LogsProcessor.c  LogsProcessor.h  ParallelLogsProcessor.c  ParallelLogsProcessor.h  README.md  main.c
hw11-ParsingLogs/test/: file1  file2  file3
hw12-TelnetIllustrator/: CMakeLists.txt  README.md  TelnetProtocol.c  TelnetProtocol.h  main.c
hw13-HTTP-server/: CMakeLists.txt  Client.c  README.md  main.c
hw13-HTTP-server/Server/: Server.c  Server.h  Worker.c  Worker.h
hw13-HTTP-server/Utils/: HTTP.c  HTTP.h  Utils.c  Utils.h
hw13-HTTP-server/test_directory/: all_files_list  file1  file2  file3
hw14-Databases/: CMakeLists.txt  README.md  main.c
hw15-3D-Cube-Rotation/: CMakeLists.txt  README.md  main.c
hw2-utf-convertor/: CMakeLists.txt  CP1251.c  CP1251.h  README.md  iso8859-5.c  iso8859-5.h  koi8.c  koi8.h  main.c  utf8.c  utf8.h
hw2-utf-convertor/tests/: utf8_output.txt
hw3-hashmap/: CMakeLists.txt  Hash.c  Hash.h  HashMap.c  HashMap.h  README.md  main.c
hw3-hashmap/tests/: test_small
hw4-gstreamer-wav-player/: README.md  launch.sh  main.c  meson.build
hw4-gstreamer-wav-player/wav_player/: WAVHeader.h  meson.build  wavplayer.c  wavplayer.h
hw5-libcurl-weather-forecast/: CMakeLists.txt  JSONVisualizer.c  JSONVisualizer.h  README.md  ReadURLData.c  ReadURLData.h  main.c
hw5-libcurl-weather-forecast/3d-party/: CMakeLists.txt
hw6-Logger/: CMakeLists.txt  MyLogger.c  MyLogger.h  README.md  logger_example.c  main.c
hw7-Assembly/: CMakeLists.txt  README.md  main.c  main_with_comments.asm
hw8-Valgrind/: README.md
hw8-Valgrind/clib/src/common/: clib-package.c
hw9-Daemon/: CMakeLists.txt  CommonData.h  Daemonizer.c  Daemonizer.h  FileInfoMonitoring.c  FileInfoMonitoring.h  InstallDaemon.cmake  MyDaemon.c  Server.c  TestClient.c  my-daemon.service
